tests/snapshots/undo_redo_comprehensive_test__undo_visual_change.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 1

Buffer:
H[ ]world
